--- a/test_po_editor/app1/locale/en/LC_MESSAGES/django.po
+++ b/test_po_editor/app1/locale/en/LC_MESSAGES/django.po
@@ -1,17 +1,27 @@
 msgid ""
 msgstr ""
+"Project-Id-Version: app1\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2016-04-11 17:33+0200\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: POEditor.com\n"
-"Project-Id-Version: app1\n"
-"Language: en\n"
 
-#: views.py:9
+#: views.py:7
+msgctxt "month name"
+msgid "May"
+msgstr ""
+
+#: views.py:11
 msgid "Hello from app1<br>"
 msgstr ""
 
-#: views.py:10
-msgid "<a href=\"{}\">Back to main page</a>"
+#: views.py:12
+msgid "A New String for app1: app1-change1"
 msgstr ""
 
+#: views.py:14
+msgid "<a href=\"{}\">Back to main page</a>"
+msgstr ""
